# ravanos-theme

./: README.md  pyproject.toml  setup.py  theme_fix.patch
.taskmaster/: state.json
.taskmaster/docs/: prd.md
.taskmaster/reports/: task-complexity-report.json
frappe-bench/apps/modern_theme/modern_theme/config/: desktop.py
modern_theme/: README.md  hooks.py  pyproject.toml
modern_theme/config/: desktop.py
modern_theme/modern_theme/: __init__.py  hooks.py
modern_theme/modern_theme/config/: desktop.py
modern_theme/modern_theme/public/css/: modern_theme.css
modern_theme/public/css/: modern_theme.css
modern_theme/public/js/: modern_theme.js
tmp_repo_contents/: LICENSE  README.md  __init__.py  hooks.py  modern_theme.css  modules.txt  pyproject.toml  tasks.json
