[build-system]
requires = ["flit_core<4,>=3"]
build-backend = "flit_core.buildapi"

[project]
name = "modern_theme"
authors = [{ name = "Modern Theme", email = "info@example.com" }]
dynamic = ["version", "description"]
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Private :: Do Not Upload"]

[project.urls]
Source = "https://github.com/user/modern_theme" 